--- a/css/styles.css
+++ b/css/styles.css
@@ -2,6 +2,7 @@ body {
   background-color: #DBE2EF;
   margin: 0;
   font-family: 'Merriweather', serif;
+  text-justify: inter-word;
 }
 
 hr {
@@ -9,6 +10,7 @@ hr {
   border-style: dotted none none;
   border-width: 7px;
   border-color: #3F72AF;
+  margin: 50px auto;
 }
 
 h1 {
@@ -75,7 +77,7 @@ h3 {
 }
 
 .button:hover {
-  background-color:#DBE2EF;
+  background-color:#3F72AF;
   transition: 0.7s;
 }
 
@@ -89,6 +91,8 @@ h3 {
    text-decoration: none;
    font-weight: bold;
    display: inline-block;
+   margin-bottom: 40px;
+   font-family: 'Montserrat', sans-serif;
 }
 
 .language-spanish{
@@ -151,6 +155,9 @@ h3 {
       transition: 0.7s;
   }
 
+  .Middle-ground{
+    margin-bottom: 25px;
+  }
 
 .Twitter {
    padding: 8px 12px;
@@ -193,6 +200,24 @@ h3 {
       transition: 0.7s;
   }
 
+.profile{
+  margin-bottom: 25px;
+}
+
+.resume-image{
+  width: 100px;
+  height: 100px;
+  float: left;
+  margin-right: 30px;
+}
+
+.resume-image-1{
+  width: 90px;
+  height: 80px;
+  float: left;
+  margin-right: 30px;
+}
+
 .skill-row{
   width: 10%;
   padding: 10px;
@@ -200,7 +225,7 @@ h3 {
 }
 
 .skills{
-  margin-left: 25%;
+  margin: auto;
   max-width: 50%;
   display: flex;
   justify-content: space-between;
@@ -214,6 +239,31 @@ h3 {
   bottom: 0;
   font-size: 14px;
   color: white;
+}
+
+.education{
+  width: 80%;
+  margin: 20px auto 40px 50px;
+}
+
+.education-2{
+  flex-direction: column;
+  width: 40%;
+}
+
+.education-work{
+  display: flex;
+  margin-left: 10%;
+}
+
+.I-can-help{
+  width: 40%;
+  margin: 40px auto;
+}
+
+.work{
+  clear: left;
+  margin-top: 60px;
 }
 
 
